--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <div class="space-y-14">
                     <div class="text-6xl font-serif flex items-center justify-center">
                         <span>1. Buy</span>
-                        <img src="gradientsblock.jpg" alt="Gradients Block" class="h-16 w-auto ml-4" />
+                        <img src="gradientsblock.png" alt="Gradients Block" class="h-16 w-auto ml-4" />
                         <span>†</span>
                     </div>
                     
