--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 
                 <div class="mt-6 sm:mt-8 md:mt-10 lg:mt-12 text-xs sm:text-sm text-gray-600 max-w-xs sm:max-w-sm md:max-w-lg lg:max-w-2xl mx-auto">
                     <p class="mb-2">* The above references an opinion and is for information purposes only. It is not intended to be investment advice. Seek a duly licensed professional for investment advice.</p>
-                    <p>†<a href="https://gradients.io" target="_blank">Gradients</a> is a 0 click training platform built on <a href="https://bittensor.com" target="_blank">Bittensor</a></p>
+                    <p>† <a style="color: #7e62fd" href="https://gradients.io" target="_blank">Gradients</a> is a 0 click training platform built on <a style="color: #7e62fd" href="https://bittensor.com" target="_blank">Bittensor</a></p>
                 </div>
             </div>
         </div>
