--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Gradients & Chill</title>
     
     <meta property="og:title" content="Gradients & Chill">
-    <meta property="og:description" content="Buy Gradients. Chill. The simplest way to invest in AI infrastructure.">
+    <meta property="og:description" content="Buy Gradients. Chill.">
     <meta property="og:image" content="https://mcjkula.github.io/gradientsandchill/gradientsblock.png">
     <meta property="og:url" content="https://mcjkula.github.io/gradientsandchill">
     <meta property="og:type" content="website">
